--- a/contacts/views/index.pug
+++ b/contacts/views/index.pug
@@ -6,22 +6,25 @@ block content
       h1= title
       hr
       br
-      table.table.table-striped.table-bordered.table-hover
-        if contacts
-          thead
-            tr
-              th ID
-              th First Name
-              th Last Name
-              th EMail
-          tbody
-            for contact in contacts
+      if error
+        .alert.alert-danger #{error}
+      else
+        table.table.table-striped.table-bordered.table-hover
+          if contacts
+            thead
               tr
-                td= contact.id
-                td= contact.firstname
-                td= contact.lastname
-                td= contact.email
-        else
-            tr
-              td
-                | No contacts found
+                th ID
+                th First Name
+                th Last Name
+                th EMail
+            tbody
+              for contact in contacts
+                tr
+                  td= contact.id
+                  td= contact.firstname
+                  td= contact.lastname
+                  td= contact.email
+          else
+              tr
+                td
+                  | No contacts found
