--- a/weather/views/index.pug
+++ b/weather/views/index.pug
@@ -24,7 +24,7 @@ block content
             .panel.panel-primary
               .panel-heading Weather for: #{weather.name}, #{weather.sys.country}
               .panel-body
-               p Current Temperature =&gt; #{weather.main.temp} &#8451;, #{weather.weather[0].description}
-               p Humidity =&gt; #{weather.main.humidity} &#37;
-               p Min =&gt; #{weather.main.temp_min} &#8451;
-               p Max =&gt; #{weather.main.temp_max} &#8451;
+               p Current Temperature = #{weather.main.temp} !{units}, #{weather.weather[0].description}
+               p Humidity = #{weather.main.humidity} &#37;
+               p Min = #{weather.main.temp_min} !{units}
+               p Max = #{weather.main.temp_max} !{units}
