Added a POST route for contacts app to seed data

--- a/contacts/views/index.pug
+++ b/contacts/views/index.pug
@@ -25,6 +25,10 @@ block content
                   td= contact.lastname
                   td= contact.email
           else
-              tr
-                td
-                  | No contacts found
+            form(action="/seed", method="POST")
+                button(type="submit").btn.btn-primary Seed Data
+            br
+            br
+            tr
+              td
+                | No contacts found
