--- a/weather/views/index.pug
+++ b/weather/views/index.pug
@@ -3,7 +3,7 @@ block content
   .container
       h2 
         p
-         | HAva Durumu Uygulaması
+         | Hava Durumu Uygulaması
       br
       br
       .row
